# lambda-ci-cd

./: Makefile  README.md  lamdba_function.py  pyproject.toml  test_lambda_function.py
.github/workflows/: feature_branch.yaml
